# dicto

./: .gitignore  Cargo.toml  Makefile  README.md  patch-gpui-build.sh
.cargo/: config.toml
.github/workflows/: release.yml
docs/: README.md  architecture.md  gpui-api.md  gpui-async.md  gpui-components.md  mdict-format.md  rendering.md  settings.md
gpui/: Cargo.toml  build.rs  icon.rc
gpui/src/: app.rs  audio.rs  catalog.rs  colors.rs  download.rs  indexing.rs  main.rs  state.rs
gpui/src/components/: about_panel.rs  detail_panel.rs  download_panel.rs  import_panel.rs  init_modal.rs  mod.rs  search_bar.rs  settings_modal.rs  settings_panel.rs  settings_window.rs  word_list.rs
gpui/src/html/: css.rs  mod.rs  parser.rs  render.rs
packaging/arch/: .SRCINFO  .gitignore  PKGBUILD  dicto.desktop
packaging/windows/: installer.iss
src/: dictionary.rs  lib.rs  main.rs  registry.rs
src/config/: mod.rs
src/formats/: mod.rs
src/formats/mdict/: mod.rs
src/formats/mdict/parser/: header.rs  keyblock.rs  mdd.rs  mdx.rs  mod.rs  recordblock.rs
src/handlers/: mod.rs
src/lucky/: mod.rs
src/query/: mod.rs
src/settings/: mod.rs
src/util/: mod.rs
