[package]
name = "dicto"
version = "0.1.4"
edition = "2024"
authors = ["Mohammadreza Khani"]
license = "AGPL-3.0-or-later"

[dependencies]
mdict-rs = { path = ".." }
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
anyhow = "1.0"
tray-icon = "0.24.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rodio = { version = "0.20", default-features = false, features = ["mp3", "wav", "vorbis", "flac"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[build-dependencies]
embed-resource = "3.0"

[target.'cfg(target_os = "linux")'.dependencies]
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit", "wayland", "x11"] }
gtk = "0.18"
x11rb = { version = "0.13", default-features = false }
